# blobbin

./: .gitignore  Cargo.toml  README.md  config.json
src/: app.rs  app_state.rs  blob.rs  common.rs  config.rs  graphics.rs  main.rs  math.rs  wgpu_tutorial.rs  world.rs
src/app/: blob.rs  state.rs  world.rs
src/common/: config.rs  math.rs
src/common/math/: grid.rs  macros.rs  vector2.rs
src/ecs/: entity.rs
src/graphics/: camera.rs  color.rs  config.rs  instance.rs  object.rs  shaders.rs  shape.rs  state.rs  uniforms.rs  vertex.rs
src/graphics/boids/: boids.rs
src/graphics/shaders/: basic.rs  basic.vert
src/math/: grid.rs  macros.rs  vector2.rs
