[package]
name = "pixels_playground"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
env_logger = "0.7"
log = "0.4"
pixels = "0.1"
winit = "0.22"
winit_input_helper = "0.7"