[package]
name = "blobbin"
version = "0.1.0"
authors = ["Jordan Grace <jordan.t.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytemuck = "1.3"
env_logger = "0.7"
futures = "0.3"
image = "0.23"
imgui = "0.4"
imgui-winit-support = "0.4"
imgui-wgpu = "0.7"
log = "0.4"
rand = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shaderc = "0.6"
winit = "0.22"
winit_input_helper = "0.7"
wgpu = "0.5"
